--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,6 +62,7 @@ a {
   border: none !important;
   border-radius: 30px !important;
   padding: 15px 30px !important;
+  text-transform: capitalize;
 }
 .themeButton:focus,
 .themeButton:active,
