--- a/components/Layout/Footer/Footer.module.scss
+++ b/components/Layout/Footer/Footer.module.scss
@@ -2,6 +2,12 @@
 .reviewsWrapper {
   background: #f3f2f8;
   padding: 90px 0px;
+  @media screen and (max-width: 1440px) {
+    padding: 50px;
+  }
+  @media screen and (max-width: 767px) {
+    padding: 30px 0 10px;
+  }
   .reviewCard {
     display: flex;
     align-items: center;
@@ -55,6 +61,9 @@
   padding: 70px 0px;
   overflow: hidden;
   text-align: center;
+  @media screen and (max-width: 1440px) {
+    padding: 50px 0px;
+  }
   .footerShapeTop {
     transform: rotate(180deg);
     position: absolute;
@@ -155,6 +164,9 @@
     padding: 0px;
     margin: 125px 0px 0px 0px;
     text-align: center;
+    @media screen and (max-width: 767px) {
+      margin-top: 40px;
+    }
     li {
       a {
         display: inline-block;
