--- a/components/Homepage/Homepage.module.css
+++ b/components/Homepage/Homepage.module.css
@@ -795,12 +795,13 @@
   .aboutUsSec{
     display: flex;
     justify-content: center;
+    /* max-width: 600px; */
+    margin: 0 auto;
+  }
+  .aboutUsImg{
     max-width: 600px;
     margin: 0 auto;
   }
-  /* .aboutUsSec img{
-    max-width: 600px;
-  } */
 }
 
 @media only screen and (max-width: 991px) {
