--- a/components/Career/Career.module.scss
+++ b/components/Career/Career.module.scss
@@ -6,6 +6,7 @@
     }
     .jobCard {
         background: var(--white);
+        margin-bottom: 20px;
         padding: 25px;
         box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.1);
         text-align: center;
